retrieveUnpackaged/objects/Submission__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commenter_Category__c</fullName>
        <label>Commenter Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academia</fullName>
                </value>
                <value>
                    <fullName>Academia/ Professional Societies</fullName>
                </value>
                <value>
                    <fullName>Alaska Native Corporations</fullName>
                </value>
                <value>
                    <fullName>Congressional Delegate</fullName>
                </value>
                <value>
                    <fullName>EPA Document</fullName>
                </value>
                <value>
                    <fullName>Faith-Based Groups</fullName>
                </value>
                <value>
                    <fullName>Federal Government Agency</fullName>
                </value>
                <value>
                    <fullName>Industry - Fisheries/Fishing Tourism</fullName>
                </value>
                <value>
                    <fullName>Industry - Jewelry</fullName>
                </value>
                <value>
                    <fullName>Industry - Mineral Extraction</fullName>
                </value>
                <value>
                    <fullName>Industry - Other</fullName>
                </value>
                <value>
                    <fullName>Industry - Restaurant/Food Processing/Food Sales</fullName>
                </value>
                <value>
                    <fullName>Industry - Tourism/Outdoor Recreation</fullName>
                </value>
                <value>
                    <fullName>Local Government Agency/Elected Official</fullName>
                </value>
                <value>
                    <fullName>Local NGO</fullName>
                </value>
                <value>
                    <fullName>Mass Mailer</fullName>
                </value>
                <value>
                    <fullName>National Environmental NGO</fullName>
                </value>
                <value>
                    <fullName>National NGO</fullName>
                </value>
                <value>
                    <fullName>Non-Regulated Community - General</fullName>
                </value>
                <value>
                    <fullName>Other NGOs</fullName>
                </value>
                <value>
                    <fullName>Private Citizen - Environmental Justice</fullName>
                </value>
                <value>
                    <fullName>Private Citizen - Expert</fullName>
                </value>
                <value>
                    <fullName>Private Citizen - General</fullName>
                </value>
                <value>
                    <fullName>Private Citizen - Watershed Visitors</fullName>
                </value>
                <value>
                    <fullName>Professional Society</fullName>
                </value>
                <value>
                    <fullName>Regulated Community - Agriculture</fullName>
                </value>
                <value>
                    <fullName>Regulated Community - Development</fullName>
                </value>
                <value>
                    <fullName>Regulated Community - General</fullName>
                </value>
                <value>
                    <fullName>Regulated Community - Local Communities</fullName>
                </value>
                <value>
                    <fullName>Regulated Community - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commenter_Name__c</fullName>
        <label>Commenter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Docket_Posted__c</fullName>
        <label>Date Docket Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docket_Number__c</fullName>
        <label>Docket Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPA-HQ-OW-2017-0203</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>EPA-R10-OW-2017-0369</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Origin__c</fullName>
        <label>Geographic Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tribe</fullName>
                </value>
                <value>
                    <fullName>Islands/Territories</fullName>
                </value>
                <value>
                    <fullName>Non-Alaska Tribe</fullName>
                </value>
                <value>
                    <fullName>Alaska (not Bristol Bay)</fullName>
                </value>
                <value>
                    <fullName>Bristol Bay Watershed</fullName>
                </value>
                <value>
                    <fullName>Nushagak and Kvichak Watershed</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_Snippets__c</fullName>
        <label>Snippets?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter_Type__c</fullName>
        <label>Submission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unique Letter</fullName>
                </value>
                <value>
                    <fullName>Duplicate Letter</fullName>
                </value>
                <value>
                    <fullName>Similar Letter</fullName>
                </value>
                <value>
                    <fullName>Unique Submission</fullName>
                </value>
                <value>
                    <fullName>Duplicate Submission</fullName>
                </value>
                <value>
                    <fullName>Similar Submission</fullName>
                </value>
                <value>
                    <fullName>Public Hearing</fullName>
                </value>
                <value>
                    <fullName>Supporting Document (EPA)</fullName>
                </value>
                <value>
                    <fullName>Mass Mailing Campaign</fullName>
                </value>
                <value>
                    <fullName>Wrong docket</fullName>
                </value>
                <value>
                    <fullName>Modified Mass Mailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Mailing_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mass Mailing Campaign</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Waters of the US</value>
            </filterItems>
            <filterItems>
                <field>Mass_Mailing_Campaign__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Waters of the US</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bristol Bay</value>
            </filterItems>
            <filterItems>
                <field>Mass_Mailing_Campaign__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bristol Bay</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Mass_Mailing_Campaign__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Positive_Negative_Feedback__c</fullName>
        <label>Positive/Negative Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postmark_Date__c</fullName>
        <label>Postmark Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission_Link__c</fullName>
        <label>Submission Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Submission_Number__c</fullName>
        <externalId>true</externalId>
        <label>Submission Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Status__c</fullName>
        <label>Submission Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submission Entered</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Initially Reviewed</fullName>
                </value>
                <value>
                    <fullName>Printed for Reading</fullName>
                </value>
                <value>
                    <fullName>Snippets Entered</fullName>
                </value>
                <value>
                    <fullName>Agency Ready</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Pending Response</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substantive__c</fullName>
        <label>Substantive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Submission</label>
    <listViews>
        <fullName>All_Waters_of_the_US</fullName>
        <columns>NAME</columns>
        <columns>Submission_Number__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Agency_Name__c</columns>
        <columns>Letter_Type__c</columns>
        <columns>Submission_Status__c</columns>
        <columns>Have_Snippets__c</columns>
        <columns>Submission_Link__c</columns>
        <columns>Geographic_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submission_Number__c</field>
            <operation>equals</operation>
            <value>11728</value>
        </filters>
        <label>All Waters of the US</label>
    </listViews>
    <listViews>
        <fullName>Bristol_Bay</fullName>
        <columns>NAME</columns>
        <columns>Commenter_Name__c</columns>
        <columns>Commenter_Category__c</columns>
        <columns>Submission_Number__c</columns>
        <columns>Submission_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Submission__c.Bristol_Bay</value>
        </filters>
        <label>All Bristol Bay</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <recordTypes>
        <fullName>Bristol_Bay</fullName>
        <active>true</active>
        <label>Bristol Bay</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US</fullName>
        <active>true</active>
        <label>Waters of the US</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>